# pepe

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  README.md  compile.bat  launch.bat  launch_visual.bat  nodos_ciudad.csv  nodos_ciudad.json  package-lock.json  package.json  start_web.bat  start_web.sh  unit_tests
.qoder/quests/: problem-fixes.md  route-planning-interface.md
bench/: BenchmarkFramework.hpp  BenchmarkRunner.hpp  CMakeLists.txt  ComplexityAnalysis.hpp
bench/runner/: benchmark_main.cpp
bench/scenarios/: DataStructureBenchmarks.hpp  GraphAlgorithmBenchmarks.hpp  SortingBenchmarks.hpp
cli/: CMakeLists.txt  cli_commands.cpp  main.cpp
core/: CMakeLists.txt  ErrorHandling.hpp
core/algorithms/: ExternalSort.hpp  InternalSort.hpp
core/containers/: HashMap.hpp  LRUCache.hpp  LinkedList.hpp  MinHeap.hpp  Queue.hpp  Stack.hpp
core/graph/: Edge.hpp  Node.cpp  Node.hpp  WeightedGraph.hpp
core/io/: GTFSConverter.hpp  GTFSData.hpp  GTFSParser.hpp
core/search/: AStar.hpp  BFS.hpp  DFS.hpp  Dijkstra.hpp  MST.hpp
core/simulation/: EventQueue.hpp  Events.hpp
core/traffic/: TrafficSimulation.hpp
core/trees/: AVLTree.hpp
docs/: CMakeLists.txt  COMPLEXITY_ANALYSIS.md  FINAL_REPORT.md  TECHNICAL_DOCUMENTATION.md
engine/: CMakeLists.txt  engine_placeholder.cpp
gui/: Qt_GUI_Design.md
io/: CMakeLists.txt  io_placeholder.cpp
tests/: CMakeLists.txt  TestFramework.cpp  TestFramework.hpp
tests/unit/: test_avl_tree.cpp  test_event_simulation.cpp  test_external_sorting.cpp  test_graph.cpp  test_graph_algorithms.cpp  test_gtfs_data_loading.cpp  test_hashmap.cpp  test_linkedlist.cpp  test_lru_cache.cpp  test_main.cpp  test_minheap.cpp  test_queue_stack.cpp  test_simple.cpp  test_sorting_algorithms.cpp  test_traffic_simulation.cpp
viz/: AlgorithmVisualizer.hpp  CMakeLists.txt  DataStructureVisualizer.hpp  SimulationVisualizer.hpp  VisualizationFramework.hpp  test_visualization.cpp
web/: README.md  index.html  server.py
web/route-planner-ui/: .env.example  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/route-planner-ui/public/: calles_culiacan_centro.json  calles_culiacan_muestra_1000.json  crear_muestra_calles.py  ejemplo_dataset_con_aristas.json  extraer_calles_reales.py
web/route-planner-ui/src/: App.tsx  index.css
web/route-planner-ui/src/components/: AlgorithmTimeline.tsx  AlgorithmVisualization.tsx  CityMap.tsx  CitySimulator.tsx  CitySimulatorSection.tsx  CityStats.tsx  ControlPanel.tsx  DemoExamples.tsx  DesignShowcase.tsx  EducationalPanel.tsx  Footer.tsx  GraphControls.tsx  GraphStats.tsx  Header.tsx  HeroSection.tsx  MapContainer.tsx  MetricsGrid.tsx  OriginalSimulator.tsx  PerformanceDashboard.tsx  ResultsPanel.tsx  UnifiedControlPanel.tsx  UnifiedResultsPanel.tsx  VisualAlgorithmMap.tsx
web/route-planner-ui/src/components/__tests__/: AlgorithmTimeline.test.tsx  ControlPanel.test.tsx  Header.test.tsx  MetricsGrid.test.tsx
web/route-planner-ui/src/services/: api.ts  sse.ts  websocket.ts
web/route-planner-ui/src/services/__tests__/: api.test.ts
web/route-planner-ui/src/store/: index.ts
web/route-planner-ui/src/store/__tests__/: index.test.ts
web/route-planner-ui/src/styles/: tokens.ts
web/route-planner-ui/src/test/: setup.ts  utils.tsx
web/route-planner-ui/src/types/: api.ts
