# Documentation module
# Placeholder for documentation generation

# Future: Add Doxygen or other documentation tools
# find_package(Doxygen)
# if(DOXYGEN_FOUND)
#     add_custom_target(docs
#         COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile
#         WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
#         COMMENT "Generating documentation"
#     )
# endif()